# schedule-scripts

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.scraper  README.md  go.mod  go.sum  mise.toml  pyproject.toml
internal/database/: database.go
internal/service/: notification_dispatch.go
src/dotto_batch_jobs/db/: __init__.py  persist_schedule.py
src/dotto_batch_jobs/insert_faculty_rooms/: main.py
src/dotto_batch_jobs/scrape_class_changes/: lesson_ids.py  main.py
src/dotto_batch_jobs/scrape_class_changes/scrapers/: __init__.py  auth.py  cancel_classes.py  fetch.py  makeup_classes.py  room_change.py
terraform/: artifact_registry.tf  cloud_run_job.tf  main.tf  outputs.tf  scheduler.tf  secrets.tf  service_account.tf  terraform.tfvars.example  variables.tf
