[project]
name = "dotto-batch-jobs"
version = "0.1.0"
description = "公立はこだて未来大学 学生ポータルからのスクレイピング & 通知バッチ"
requires-python = ">=3.12,<3.13"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.0",
    "cloud-sql-python-connector[pg8000]>=1.11.0",
    "pg8000>=1.31.0",
]

[tool.uv]
package = false
